Fix "remove applicant" button not working: https://app.asana.com/0/30184214178581/40693930039545 Update styles for applicant card; allow card to take up full width on mobile

--- a/app/styles/components/applicant-card.styl
+++ b/app/styles/components/applicant-card.styl
@@ -18,6 +18,10 @@ $applicantCardMaxWidth ?= 40em
 		display flex
 		+media-query($breakpointMain)
 			display block
+	+media-query($breakpointMain)
+		max-width inherit
+		&s &, &s &-card
+			display block
 	&-card
 		position relative
 		&-relationship
@@ -41,6 +45,10 @@ $applicantCardMaxWidth ?= 40em
 				opacity 0.6
 				@extend $icomoon
 		&.primary-applicant
+			.applicant-card-role
+				position absolute
+				top 0
+				right 0
 			.applicant-card-full-name
 				text-indent 3em
 				display inline-block
